<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Spinner
        android:id="@+id/spinnerCrouton"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="100dp"
        android:entries="@array/custom_arrays" />

    <EditText
        android:id="@+id/txtCustomText"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/spinnerCrouton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/custom"
        android:hint="@string/hint" />

    <Button
        android:id="@+id/btnShow"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/txtCustomText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/show" />

    <CheckBox
        android:id="@+id/display_on_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShow"
        android:checked="true"
        android:text="@string/display_on_top" />

    <LinearLayout
        android:id="@+id/alternate_view_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_on_top"
        android:orientation="horizontal" />

</RelativeLayout>